examples/test/testpolicy16520.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16520
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key24: value4
      key26: value40
      key18: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value42
          key44: value10
          key14: value26
